# OpenCL_practice

./: CMakeLists.txt  README.md
hello/: hello.c  hello.cpp
hll_riemann/: hll_riemann.cl  main.cpp
